--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-   <title>Peter Pepper</title>
+	<title>Peter Pepper</title>
+	<style type="text/css">
+	html, body {
+		width: 100%;
+		height: 100%;
+		margin: 0px;
+		padding: 0px;
+		overflow: hidden;
+	}
+
+	#game {
+		width: 100%;
+		height: 100%;
+	}
+	</style>
+	<script type="text/javascript" src="scripts/vendor/webworks-1.0.2.9.js"></script>
+	<script type="text/javascript" src="scripts/vendor/zepto.js"></script>
+	<script type="text/javascript" src="scripts/engine.js"></script>
+	<script type="text/javascript" src="scripts/game.js"></script>
 </head>
 <body>
-   <p>Peter Pepper</p>
-   <script src="webworks-1.0.2.9.js"></script>
-   <script>
-      function ready() {
-         var ele = document.createElement("div");
-         ele.innerHTML = "uuid: " + blackberry.identity.uuid;
-         document.documentElement.appendChild(ele);
-      }
-      window.addEventListener("load", function(e) {
-         document.addEventListener("webworksready", ready);
-      }, false);
-   </script>
+	<canvas id="game"></canvas>
 </body>
 </html>
